test_src/compiler_errors/types/arithmetic/DivideBoolError4.b
class DivideBoolError4 {
    void test() {
        var value = true;
        println(value /= 2);
    }
}
